<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/item_home"
            android:checked="true"
            android:icon="@drawable/home"
            android:title="@string/home">
        </item>
        <item
            android:id="@+id/item_menu"
            android:icon="@drawable/menu"
            android:title="@string/nemu">
        </item>
        <item
            android:id="@+id/item_staff"
            android:icon="@drawable/staff"
            android:title="@string/staff">
        </item>
        <item
            android:id="@+id/item_analystics"
            android:icon="@drawable/analytics"
            android:title="@string/statistical">
        </item>
        <item
            android:id="@+id/item_settings"
            android:icon="@drawable/settings"
            android:title="@string/setting">
        </item>
        <item
            android:id="@+id/item_logout"
            android:icon="@drawable/logout"
            android:title="@string/logout">
        </item>
    </group>
</menu>